Arreglo de error en las imagenes

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="botones">
             <a target="_blank" class="fcc-btn" href="https://github.com/jjo64">GitHub <i class="fas fa-external-link-alt"></i></a>  
             <a target="_blank" class="fcc-btn" href="https://www.linkedin.com/in/josue-cueva-garcia-4670292b7/">Linkedin <i class="fas fa-external-link-alt"></i></a>  
-            <a target="_blank" class="fcc-btn" href="https://www.freecodecamp.org/">Instagram <i class="fas fa-external-link-alt"></i></a>  
-            <a target="_blank" class="fcc-btn" href="https://www.freecodecamp.org/">Currículo <i class="fas fa-external-link-alt"></i></a>  
+            <a target="_blank" class="fcc-btn" href="https://www.instagram.com/lautarodelcampo/">Instagram <i class="fas fa-external-link-alt"></i></a>  
+            <a target="_blank" class="fcc-btn" href="https://www.instagram.com/lautarodelcampo/">Currículo <i class="fas fa-external-link-alt"></i></a>  
         </div>
         <div class="secciones">
             <section id="sobre-mi" class="seccion">
@@ -47,7 +47,7 @@
                     Mi enfoque no se limita solo al código. Me encanta diseñar interfaces limpias y funcionales que no solo sean estéticas, sino también intuitivas. En mi tiempo libre, disfruto explorar nuevas tecnologías, contribuir a proyectos de código abierto y beber demasiado café.
                     <br><br>
                     Siempre estoy buscando oportunidades emocionantes para expandir mis habilidades y colaborar en proyectos innovadores. ¡Vamos a construir algo increíble juntos!</p>
-                <img src="/img/pngegg.png" alt="firma-digital" class="firma-digital">
+                <img src="img/pngegg.png" alt="firma-digital" class="firma-digital">
             </section>
             <!-- Otras secciones aquí -->
             <section id="skills" class="seccion">
@@ -135,7 +135,7 @@
                 <h2 class="experience__section__title" >Experiencia Profesional</h2>
                 <div class="experiencie__box">
                     <!-- CAPTURA DE PANTALLA DEL PROYECTO -->
-                    <img class="experience__img" src="/img/experiencia 1.svg">
+                    <img class="experience__img" src="img/experiencia 1.svg">
                     <div class="experience__info">
                         <h2 class="experience__title">Encriptador de texto </h2>
                         <h3 class="experience__text">Challenge Alura Codificador</h3>
@@ -149,7 +149,7 @@
         
                 <div class="experiencie__box">
                     <!-- CAPTURA DE PANTALLA DEL PROYECTO -->
-                    <img class="experience__img" src="/img/experiencia 2.svg">
+                    <img class="experience__img" src="img/experiencia 2.svg">
                     <div class="experience__info">
                         <h2 class="experience__title">Juego creado con HTML y JavaScript</h2>
                         <h3 class="experience__text"></h3>Challenge Oracle</h3>
@@ -163,7 +163,7 @@
 
                 <div class="experiencie__box">
                     <!-- CAPTURA DE PANTALLA DEL PROYECTO -->
-                    <img class="experience__img" src="/img/experiencia 3.svg">
+                    <img class="experience__img" src="img/experiencia 3.svg">
                     <div class="experience__info">
                         <h2 class="experience__title">Encriptador de texto </h2>
                         <h3 class="experience__text">Challenge Oracle</h3>
@@ -177,7 +177,7 @@
         
                 <div class="experiencie__box">
                     <!-- CAPTURA DE PANTALLA DEL PROYECTO -->
-                    <img class="experience__img" src="/img/experiencia 4.svg">
+                    <img class="experience__img" src="img/experiencia 4.svg">
                     <div class="experience__info">
                         <h2 class="experience__title">Juego creado con HTML y JavaScript</h2>
                         <h3 class="experience__text"></h3>Challenge Oracle</h3>
