Arreglo de la seccion proyectos y aprendi el min height y width.

--- a/index.html
+++ b/index.html
@@ -141,12 +141,11 @@
                         <h3 class="experience__text">Challenge Alura Codificador</h3>
                             <div class="experience__description">
                                 <!-- ENLACE DEL PROYECTO -->
-                                    <span class="experience__repo"><a href="https://github.com/anperales/encriptador"><button class="experiencia__botao--repo">Repositorio</button></a></span>
-                                    <span class="experience__demo"><a href="https://anperales.github.io/encriptador/"><button class="experience__botao--demo">Ver demo</button></a></span>
+                                    <span class="experience__repo"><a href="https://github.com/jjo64/encriptador-de-texto"><button class="experiencia__botao--repo">Repositorio</button></a></span>
+                                    <span class="experience__demo"><a href="https://jjo64.github.io/encriptador-de-texto/"><button class="experience__botao--demo">Ver demo</button></a></span>
                             </div>
                     </div>
                 </div>  
-        
                 <div class="experiencie__box">
                     <!-- CAPTURA DE PANTALLA DEL PROYECTO -->
                     <img class="experience__img" src="img/experiencia 2.svg">
@@ -155,8 +154,8 @@
                         <h3 class="experience__text"></h3>Challenge Oracle</h3>
                             <div class="experience__description">
                                 <!-- ENLACE DEL PROYECTO -->
-                                    <span class="experience__repo"><a href="https://github.com/anperales/Barberia-Alura"><button class="experiencia__botao--repo">Repositorio</button></a></span>
-                                    <span class="experience__demo"><a href="https://anperales.github.io/Barberia-Alura/"><button class="experience__botao--demo">Ver demo</button></a></span>
+                                    <span class="experience__repo"><a href="https://github.com/jjo64/encriptador-de-texto"><button class="experiencia__botao--repo">Repositorio</button></a></span>
+                                    <span class="experience__demo"><a href="https://jjo64.github.io/encriptador-de-texto/"><button class="experience__botao--demo">Ver demo</button></a></span>
                             </div>
                     </div>
                 </div>  
@@ -169,8 +168,8 @@
                         <h3 class="experience__text">Challenge Oracle</h3>
                             <div class="experience__description">
                                 <!-- ENLACE DEL PROYECTO -->
-                                    <span class="experience__repo"><a href="https://github.com/anperales/encriptador"><button class="experiencia__botao--repo">Repositorio</button></a></span>
-                                    <span class="experience__demo"><a href="https://anperales.github.io/encriptador/"><button class="experience__botao--demo">Ver demo</button></a></span>
+                                    <span class="experience__repo"><a href="https://github.com/jjo64/encriptador-de-texto"><button class="experiencia__botao--repo">Repositorio</button></a></span>
+                                    <span class="experience__demo"><a href="https://jjo64.github.io/encriptador-de-texto/"><button class="experience__botao--demo">Ver demo</button></a></span>
                             </div>
                     </div>
                 </div>  
@@ -183,8 +182,8 @@
                         <h3 class="experience__text"></h3>Challenge Oracle</h3>
                             <div class="experience__description">
                                 <!-- ENLACE DEL PROYECTO -->
-                                    <span class="experience__repo"><a href="https://github.com/anperales/Barberia-Alura"><button class="experiencia__botao--repo">Repositorio</button></a></span>
-                                    <span class="experience__demo"><a href="https://anperales.github.io/Barberia-Alura/"><button class="experience__botao--demo">Ver demo</button></a></span>
+                                    <span class="experience__repo"><a href="https://github.com/jjo64/encriptador-de-texto"><button class="experiencia__botao--repo">Repositorio</button></a></span>
+                                    <span class="experience__demo"><a href="https://jjo64.github.io/encriptador-de-texto/"><button class="experience__botao--demo">Ver demo</button></a></span>
                             </div>
                     </div>
                 </div> 
