Cambios en el css y nuevas img.

--- a/index.html
+++ b/index.html
@@ -116,19 +116,23 @@
             </section>
             <section id="formacion" class="seccion">
                 <h2>Formación académica</h2>
-                <div class="formacion-item">
-                    <img class="imagen-utn" src="https://play-lh.googleusercontent.com/XGFojVfc5XTbImdno3zRevF3TPqKfGOODel6eGDuRCZNhYmNZZ1EPwT0b0-oM5vjBt4=w600-h300-pc0xffffff-pd" alt="UTN Logo">
-                    <div class="descripcion">
-                        <p class="titulo">Analisis de datos</p>
-                        <p class="subtitulo">2018-UNLP</p>
-                    </div>
-                </div>
-                
-                <div class="formacion-item">
-                    <img class="imagen-alura" src="https://i.pinimg.com/originals/49/72/6e/49726e65f6b35c2e8e366a16c0734fb7.png" alt="Alura Logo">
-                    <div class="descripcion">
-                        <p class="titulo">Formacion en Ux Design</p>
-                        <p class="subtitulo">2024-Actualidad</p>
+                    <div class="box-container">
+                        <div class="box">
+                            <img src="img/utn.png" alt="uni1" class="utn">
+                                <h3>Analisis de Datos</h3>
+                                <p>2018-UFPR</p>
+                        </div>
+                        <div class="box">
+                            <img src="img/alura.png" alt="alura" class="alura">
+                            <h3>Formacion en UX Design</h3>
+                            <p>2019-Alura</p>
+                        </div>
+                        
+                        <div class="box">
+                            <img src="Imagenes/universidad 2.svg" alt="uni2">
+                            <h3>Postgrado en design</h3>
+                            <p>En curso-UFRJ</p>
+                        </div>
                     </div>
             </section>
             <section id="proyectos" class="seccion">
