Prueba de form.

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <img class="contact-me" src="https://le-gall.bzh/images/contact.svg" alt="contact-me">
             
                     <div class="formulario">
-                        <form action="#" method="post">
+                        <form action="https://formsubmit.co/prueba1234@gmail.com" method="post">
                             <label for="nombre">Nombre:</label>
                             <input type="text" id="nombre" name="nombre" required>
             
